--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -8,6 +8,7 @@
   /* Position */
   display: flex;
   justify-content: center;
+  scroll-behavior: smooth;
   /* Global colors */
   --clr-red: 357 95% 41%;
   --clr-white: 240 100% 100%;
@@ -20,11 +21,11 @@
   --ff-hand: 'Shadows Into Light', cursive;
 
   /* Font-sizes */
-  --fs-900: 4.2rem;
-  --fs-800: 3.3rem;
-  --fs-700: 2.5rem;
+  --fs-900: 3rem;
+  --fs-800: 2.3rem;
+  --fs-700: 1.8rem;
   --fs-600: 1.5rem;
-  --fs-500: 1.275rem;
+  --fs-500: 1.25rem;
   --fs-400: 1.125rem;
   --fs-300: 0.95rem;
   --fs-200: 0.8rem;
@@ -68,8 +69,8 @@ body {
   background-color: var(--clr-white);
   line-height: 1.5;
   min-height: 100vh;
-  /* margin: 0;
-  padding: 0; */
+  /* margin: 0.55rem; */
+  /* padding: 0; */
   border: 1px solid hsl(var(--clr-silver));
 }
 
@@ -249,11 +250,23 @@ select {
 }
 
 .page-title {
-  font-size: var(--fs-500);
+  font-size: var(--fs-600);
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 10% 0.3rem 5% 0.3rem;
+  padding: 4.5rem 0.3rem 3rem 0.3rem;
+  color: hsl(var(--clr-white));
+  text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
+  text-transform: uppercase;
+  -webkit-text-stroke: 0.5px hsl(var(--clr-dark));
+}
+
+.component-title {
+  font-size: var(--fs-600);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem;
   color: hsl(var(--clr-white));
   text-shadow: 0 0 0.25rem hsl(var(--clr-dark));
   text-transform: uppercase;
@@ -263,88 +276,42 @@ select {
 .text-content {
   font-size: var(--fs-200);
 }
-/* Media Querries */
 
-@media screen and (max-width: 320px) {
-  .page-title {
-    font-size: var(--fs-500);
-  }
-  .text-content {
-    font-size: var(--fs-100);
-  }
-}
-
-@media screen and (min-width: 500px) {
-  body {
-    font-size: var(--fs-300);
-  }
-  .page-title {
-    font-size: var(--fs-600);
-    letter-spacing: var(--ls-1);
-    /* padding: 33% 0.3rem 33% 0.3rem; */
-  }
-  .text-content {
-    font-size: var(--fs-300);
-  }
-}
-
-@media screen and (min-width: 800px) {
-  body {
-    font-size: var(--fs-400);
-  }
-  .page-title {
-    font-size: var(--fs-700);
-    /* padding: 50% 0.3rem 30% 0.3rem; */
-    letter-spacing: var(--ls-2);
-  }
-  .text-content {
-    font-size: var(--fs-400);
-  }
-}
-
-@media screen and (min-width: 1000px) {
-  body {
-    font-size: var(--fs-500);
-  }
-  .page-title {
-    font-size: var(--fs-800);
-    /* padding: 20rem 0.6rem; */
-  }
-  .text-content {
-    font-size: var(--fs-500);
-  }
-}
 /* ----------------- */
 /* Components        */
 /* ----------------- */
 
-.button-large {
-  display: grid;
+.preview-component {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  justify-content: space-evenly;
   position: relative;
-  place-items: center;
-  padding: 0 1.2em;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  text-decoration: none;
-  z-index: 1;
+  border: 0.125rem solid hsl(var(--clr-dark));
+  height: auto;
+  max-width: 99vw;
+  border-radius: 0.33rem;
+  box-shadow: 0 0 0.33rem 0.15rem hsl(var(--clr-dark));
+  margin: 0.55rem;
 }
 
-.button-large::after {
-  content: '';
-  position: absolute;
-  background-color: hsl(var(--clr-red) / 0.33);
-  width: 100%;
-  height: 100%;
-  border-radius: inherit;
-  z-index: -1;
-  opacity: 0;
-  transition: opacity 500ms linear, transform 750ms ease-in-out;
+.button-large {
+  border: 0.125rem solid hsl(var(--clr-red));
+  border-radius: 0.33rem;
+  background-color: hsl(var(--clr-dark));
+  width: 50%;
+  height: 3rem;
+  margin: 1rem;
+  transition: linear 0.33s;
+  cursor: pointer;
+  text-transform: uppercase;
+  max-width: 20rem;
+  color: hsl(var(--clr-white));
 }
-
-.button-large:hover::after,
-.button-large:focus::after {
-  transform: scale(1.5);
-  opacity: 1;
+.button-large:hover,
+.button-large:focus {
+  box-shadow: 0 0 0.11rem 0.11rem hsl(var(--clr-red));
+  color: hsl(var(--clr-red));
 }
 
 .underline-indicators > * {
@@ -359,4 +326,80 @@ select {
 
 .underline-indicators > .active {
   border-bottom: 0.2em solid hsl(var(--clr-red) / 1);
+}
+
+/* --------------- */
+/* Media Querries  */
+/* --------------- */
+
+@media screen and (max-width: 335px) {
+  .page-title {
+    font-size: var(--fs-500);
+  }
+  .text-content {
+    font-size: var(--fs-100);
+  }
+  .component-title {
+    font-size: var(--fs-500);
+  }
+}
+@media screen and (max-width: 340px) {
+  .container {
+    margin-inline: 0.25rem;
+  }
+}
+@media screen and (min-width: 500px) {
+  body {
+    font-size: var(--fs-300);
+  }
+  .page-title {
+    font-size: var(--fs-700);
+    letter-spacing: var(--ls-1);
+    /* padding: 33% 0.3rem 33% 0.3rem; */
+  }
+  .text-content {
+    font-size: var(--fs-300);
+  }
+  .component-title {
+    font-size: var(--fs-700);
+    letter-spacing: var(--ls-1);
+  }
+}
+
+@media screen and (min-width: 600px) {
+  body {
+    font-size: var(--fs-400);
+  }
+  .page-title {
+    font-size: var(--fs-800);
+    /* padding: 50% 0.3rem 30% 0.3rem; */
+    letter-spacing: var(--ls-2);
+  }
+  .text-content {
+    font-size: var(--fs-400);
+  }
+  .component-title {
+    font-size: var(--fs-800);
+    letter-spacing: var(--ls-2);
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  body {
+    font-size: var(--fs-500);
+  }
+  .page-title {
+    font-size: var(--fs-900);
+    padding: 5rem 0.6rem;
+  }
+  .text-content {
+    font-size: var(--fs-500);
+  }
+  .preview-component {
+    min-height: 30rem;
+    margin: 3rem 0.55rem;
+  }
+  .component-title {
+    font-size: var(--fs-900);
+  }
 }
