--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -1,15 +1,13 @@
 .footer {
   width: 100%;
   height: auto;
-  border: 0.15rem solid hsl(var(--clr-dark));
   grid-template-rows: auto auto;
-  gap: 0;
-  border-radius: 0.33rem;
+  /* gap: 0; */
   box-shadow: 0 0 0.33rem 0.15rem hsl(var(--clr-dark));
 }
 .footer-top {
   position: relative;
-  width: 100%;
+  width: 94%;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -19,7 +17,7 @@
   max-width: 100px;
   display: flex;
   align-items: center;
-  margin: 0.33rem;
+  margin-left: 1rem;
 }
 .footer .contact {
   flex-direction: column;
@@ -37,8 +35,8 @@
   word-break: break-all;
 }
 
-.social-media {
-  border-top: 0.15rem solid hsl(var(--clr-dark));
+.footer-bottom > .social-media {
+  border-top: 0.15rem solid hsl(var(--clr-gold));
   width: 100%;
 }
 .social-media ul {
@@ -49,42 +47,7 @@
 .social-media ul li svg {
   transition: transform ease-in-out 0.33s;
 }
-.social-media ul li svg:hover {
+ul li svg:hover {
   cursor: pointer;
   transform: scale(1.2);
 }
-
-@media screen and (max-width: 330px) {
-  /* .footer {
-    transform: scale(81%);
-  } */
-}
-/* .contact-form {
-  width: 80%;
-  position: relative;
-  margin-inline: 1rem;
-  max-width: 35rem;
-  border: 1px solid red;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-}
-.contact-form form {
-  width: 100%;
-}
-
-.contact-form form > input,
-textarea {
-  margin-bottom: 0.5rem;
-  width: 100%;
-  border: 0.125rem solid hsl(var(--clr-dark));
-  border-radius: 0.33rem;
-}
-#send-message {
-  background-color: hsl(var(--clr-light));
-  width: 50%;
-
-  border: 0.15rem solid hsl(var(--clr-dark));
-  position: relative;
-} */
