--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -1,5 +1,3 @@
-/* to do the welcome text animation*/
-
 .welcome-logo {
   padding-inline: 0.33rem;
   height: auto;
@@ -25,7 +23,7 @@
   color: hsl(var(--clr-red));
   overflow: hidden;
   width: 0%;
-  animation: animate 12s ease-in-out;
+  animation: animate 5s linear;
   animation-fill-mode: forwards;
   animation-delay: 1.5s;
 }
@@ -36,28 +34,12 @@
     width: 0;
     top: -2.5px;
   }
-  20% {
-    width: 20%;
-    top: -2.5px;
-  }
-  30% {
-    width: 40%;
-    top: -2.5px;
-  }
-  40% {
-    width: 80%;
-    top: -2.5px;
-  }
   50% {
     width: 200%;
     top: -2.5px;
   }
-  75% {
-    width: 100%;
-    top: -2.5px;
-  }
   100% {
-    width: 0;
+    width: 0%;
     top: -2.5px;
   }
 }
@@ -67,9 +49,11 @@
   height: auto;
   max-height: 54rem;
   max-width: 80rem;
+  padding: 0.33rem;
 }
 
 .nav-container video {
-  box-shadow: 0.33rem 0 0.33rem hsl(var(--clr-dark));
-  border-radius: 1rem;
+  border: 0.125rem solid hsl(var(--clr-dark));
+  border-radius: 0.33rem;
+  box-shadow: var(--bs);
 }
