--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -3,7 +3,7 @@
   height: auto;
   grid-template-rows: auto auto;
   /* gap: 0; */
-  box-shadow: 0 0 0.33rem 0.15rem hsl(var(--clr-dark));
+  box-shadow: var(--bs);
 }
 .footer-top {
   position: relative;
