add classes-schedule page, link it to classes parent component

--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -58,7 +58,7 @@
   background-size: 88%;
 }
 .class-spar {
-  background-image: url('https://source.unsplash.com/misTB4pmevc');
+  background-image: url('https://source.unsplash.com/_rNVw54xZZg');
 
   background-position: right;
   background-size: 88%;
