--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -2,12 +2,11 @@
   width: 100%;
   height: auto;
   grid-template-rows: auto auto;
-  /* gap: 0; */
-  box-shadow: var(--bs);
+  border-top: 0.15rem solid black;
 }
 .footer-top {
   position: relative;
-  width: 94%;
+  width: 99%;
   height: auto;
   display: flex;
   justify-content: space-between;
