--- a/shinobi-frontend/src/Components/ClassesPage/SchedulePage/SchedulePage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/SchedulePage/SchedulePage.css
@@ -1,4 +1,27 @@
 .schedule-page {
-  position: relative;
   min-height: 100vh;
+  width: 99vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+}
+.schedule-container {
+  border: 0.15rem solid hsl(var(--clr-dark));
+  width: 90vw;
+  max-width: 77rem;
+  height: 30rem;
+  margin: 2rem 0;
+}
+.back-button {
+  position: absolute;
+  top: 25%;
+  left: 0;
+}
+.back-button > button {
+  width: 88px;
+  color: red;
+  background-color: hsl(var(--clr-dark));
+  border-radius: 0.33rem;
+  font-size: xx-large;
 }
