add a class for the footer outside of the main page

--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -50,3 +50,7 @@ ul li svg:hover {
   cursor: pointer;
   transform: scale(1.2);
 }
+.secondary-page-footer > * {
+  margin-inline: 0;
+  width: 100vw;
+}
