insert scroll to top on component mount, navigate back button, modify the draft

--- a/shinobi-frontend/src/Components/Camps/CampsPage/CampsPage.css
+++ b/shinobi-frontend/src/Components/Camps/CampsPage/CampsPage.css
@@ -1,14 +1,11 @@
 .camps-page {
   position: relative;
   min-height: 100vh;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .camps-description {
   border: 1px solid red;
-}
-
-.secondary-page-footer > * {
-  margin-inline: 0;
-  position: absolute;
-  bottom: 0;
 }
