--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -3,7 +3,6 @@
   min-height: 100vh;
 }
 .classes {
-  width: 100%;
   height: 11.1rem;
   margin-bottom: 1rem;
   display: flex;
@@ -42,26 +41,23 @@
 }
 .class-jj {
   background-image: url('https://source.unsplash.com/7MRajrPiTqw');
-  background-position: left;
-  background-size: 88%;
+  /* background-position: left; */
+  width: 88%;
 }
 .class-s {
   background-image: url('https://source.unsplash.com/FH6JcaCrYJ0');
-
-  background-position: right;
-  background-size: 88%;
+  justify-self: flex-end;
+  width: 88%;
   flex-direction: row-reverse;
 }
 .class-w {
   background-image: url('https://source.unsplash.com/MS_RP-Lba0U');
-  background-position: left;
-  background-size: 88%;
+  width: 88%;
 }
 .class-spar {
   background-image: url('https://source.unsplash.com/_rNVw54xZZg');
-
-  background-position: right;
-  background-size: 88%;
+  justify-self: flex-end;
+  width: 88%;
   flex-direction: row-reverse;
 }
 .schedule-button {
