--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -5,6 +5,7 @@
 
 #welcome-text {
   height: 100vh;
+  min-height: 600px;
   max-height: 80rem;
   position: relative;
   -webkit-text-stroke: 0.5px black;
