--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   scroll-behavior: smooth;
-
+  min-height: -webkit-fill-available;
   /* Global colors */
   --clr-red: 357 95% 41%;
   --clr-white: 240 100% 100%;
@@ -73,9 +73,9 @@ body {
   background-color: var(--clr-white);
   line-height: 1.5;
   min-height: 100vh;
-  /* margin: 0.55rem; */
-  /* padding: 0; */
-  border: 1px solid hsl(var(--clr-silver));
+  margin: 0;
+  padding: 0;
+  /* border: 1px solid hsl(var(--clr-silver)); */
 }
 
 /* Reset image format */
@@ -158,6 +158,7 @@ ul {
   clip: react(0, 0, 0, 0);
   white-space: nowrap;
   border: 0;
+  opacity: 0;
 }
 
 /* Colors classes */
@@ -271,6 +272,7 @@ ul {
 
 .text-content {
   font-size: var(--fs-200);
+  padding: 0.33rem;
 }
 
 /* ----------------- */
@@ -352,9 +354,15 @@ ul {
     font-size: var(--fs-500);
   }
 }
-@media screen and (max-width: 340px) {
+@media screen and (max-width: 600px) {
+  body {
+    overflow-x: hidden;
+  }
   .container {
-    margin-inline: 0.25rem;
+    margin-inline: 0rem;
+  }
+  #welcome-text {
+    margin-top: -45%;
   }
 }
 @media screen and (min-width: 500px) {
