--- a/shinobi-frontend/src/Components/AboutPage/AboutPage.css
+++ b/shinobi-frontend/src/Components/AboutPage/AboutPage.css
@@ -1,3 +1,8 @@
+.about-page-content {
+  border-radius: 0.33rem;
+  padding: 0.33rem;
+  margin: 0.33rem;
+}
 .coaches-wrapper {
   grid-template-columns: 1fr 1fr;
   place-items: center;
@@ -19,12 +24,8 @@
 }
 .team-title {
   font-size: var(--fs-300);
-  color: hsl(var(--clr-white));
-  text-shadow: 0.1rem 0.1rem 0.1rem hsl(var(--clr-dark));
   text-transform: uppercase;
-  padding: 5rem 0 3.3rem 5rem;
-  -webkit-text-stroke: 0.5px hsl(var(--clr-dark));
-  -webkit-font-smoothing: subpixel-antialiased;
+  padding: 3rem 0;
 }
 .team-member {
   height: 10rem;
@@ -53,7 +54,7 @@
 }
 .team-member .coach-description {
   font-size: var(--fs-200);
-  color: hsl(var(--clr-white));
+  color: hsl(var(--clr-silver));
   position: absolute;
   height: 100%;
   z-index: 3;
@@ -127,7 +128,6 @@
     margin-right: 1rem;
   }
   .team-title {
-    padding: 6rem 0 5rem 5rem;
     font-size: var(--fs-600);
   }
   .team-member {
