--- a/shinobi-frontend/src/Components/Footer/Footer.css
+++ b/shinobi-frontend/src/Components/Footer/Footer.css
@@ -3,10 +3,10 @@
   height: auto;
   grid-template-rows: auto auto;
   border-top: 0.15rem solid black;
+  gap: 0;
 }
 .footer-top {
   position: relative;
-  width: 99%;
   height: auto;
   display: flex;
   justify-content: space-between;
@@ -16,20 +16,23 @@
   max-width: 100px;
   display: flex;
   align-items: center;
-  margin-left: 1rem;
+  margin-left: 0.8rem;
 }
 .footer .contact {
   flex-direction: column;
   align-self: flex-start;
-  margin: 0 0.33rem;
+  margin: 0 0.8rem;
   width: auto;
+}
+.footer-contact-list li {
+  padding: 0.3rem;
 }
 .footer-contact-list li:hover svg {
   transform: scale(1.5);
 }
 .footer ul {
   list-style: none;
-  padding-left: 2rem;
+  padding: 0.3rem;
 }
 
 .footer ul li {
