--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -134,7 +134,6 @@ ul {
 .grid {
   display: -ms-grid;
   display: grid;
-  gap: var(--gap, 1rem);
 }
 
 .flow > *:where(:not(:first-child)) {
@@ -144,7 +143,6 @@ ul {
 
 .container {
   max-width: 80rem;
-  margin-inline: 1rem;
 }
 
 /* when using this class the elements are visualy gone but still in the DOM */
@@ -284,11 +282,11 @@ ul {
   justify-content: space-evenly;
   position: relative;
   height: auto;
-  max-width: 96vw;
   border: 0.125rem solid hsl(var(--clr-dark));
   border-radius: 0.33rem;
   box-shadow: var(--bs);
-  margin: 0.55rem;
+  margin: 0.33rem;
+  padding: 1rem;
 }
 
 .button-large {
