--- a/shinobi-frontend/src/index.css
+++ b/shinobi-frontend/src/index.css
@@ -323,7 +323,7 @@ ul {
 .go-to-top-button {
   background-color: hsl(var(--clr-dark));
   opacity: 0;
-  transition: opacity 0.33s ease-in-out;
+  transition: all 0.33s ease-in-out;
   z-index: 999;
   position: fixed;
   right: 0;
@@ -349,8 +349,10 @@ ul {
 }
 .go-to-top-button:hover,
 .go-to-top-button:focus {
-  color: hsl(var(--clr-red));
   box-shadow: 0 0 0.11rem 0.11rem hsl(var(--clr-red));
+}
+.go-to-top-button:hover > a {
+  color: hsl(var(--clr-red));
 }
 
 .show {
@@ -360,7 +362,7 @@ ul {
   opacity: 1;
 }
 
-#back-button {
+.back-button {
   position: absolute;
   top: 25%;
   left: 0rem;
@@ -372,18 +374,19 @@ ul {
   font-size: var(--fs-700);
   border-radius: 0.33rem;
   margin: 0.33rem;
+  transition: all 0.33s ease-in-out;
 }
-#back-button b {
+.back-button b {
   position: absolute;
-  bottom: -3px;
+  bottom: -2px;
 }
-#back-button:hover {
+.back-button:hover {
   cursor: pointer;
   color: hsl(var(--clr-red));
   box-shadow: 0 0 0.11rem 0.11rem hsl(var(--clr-red));
 }
 
-.underline-indicators > * {
+/* .underline-indicators > * {
   padding: var(--underline-gap, 1rem) 0;
   border-bottom: 0.2em solid hsl(var(--clr-red) / 0);
 }
@@ -395,7 +398,7 @@ ul {
 
 .underline-indicators > .active {
   border-bottom: 0.2em solid hsl(var(--clr-red) / 1);
-}
+} */
 
 /* --------------- */
 /* Media Querries  */
