--- a/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
+++ b/shinobi-frontend/src/Components/ClassesPage/ClassesPage.css
@@ -44,22 +44,26 @@
   max-width: 36rem;
   text-shadow: 0 0.1rem 0.1rem hsl(var(--clr-dark));
 }
-.class-jj {
-  background-image: url('https://source.unsplash.com/7MRajrPiTqw');
+.class-s {
+  background-image: url('./classes-media/striking.jpg');
+  background-position-Y: 18%;
   width: 88%;
 }
-.class-s {
-  background-image: url('https://source.unsplash.com/FH6JcaCrYJ0');
+.class-jj {
+  background-image: url('./classes-media/jiujitsu.jpg');
+  background-position-Y: 66%;
   justify-self: flex-end;
   width: 88%;
   flex-direction: row-reverse;
 }
 .class-w {
-  background-image: url('https://source.unsplash.com/MS_RP-Lba0U');
+  background-image: url('./classes-media/wrestling.jpg');
+  background-position-y: 11%;
   width: 88%;
 }
-.class-spar {
-  background-image: url('https://source.unsplash.com/_rNVw54xZZg');
+.class-c {
+  background-image: url('./classes-media/conditioning.jpg');
+  background-position-Y: center;
   justify-self: flex-end;
   width: 88%;
   flex-direction: row-reverse;
@@ -105,6 +109,7 @@
 @media screen and (min-width: 1000px) {
   .classes {
     height: 50vh;
+    min-height: 400px;
   }
   .classes-name {
     font-size: var(--fs-900);
