--- a/shinobi-frontend/src/Components/TopPage/TopPage.css
+++ b/shinobi-frontend/src/Components/TopPage/TopPage.css
@@ -32,9 +32,6 @@
   animation-fill-mode: forwards;
   animation-delay: 2s;
 }
-#welcome-text span:hover {
-  -webkit-text-stroke: 0.1rem hsl(var(--clr-red));
-}
 
 /* Text animation */
 @keyframes animate {
@@ -51,14 +48,20 @@
     top: -2.5px;
   }
 }
-
+#to-top {
+  width: 100%;
+  height: 0.39rem;
+  margin: 0;
+  padding: 0;
+  margin-top: 4.5rem;
+}
 #nav-container {
   position: relative;
   display: flex;
-  width: 99vw;
+  width: 98vw;
   height: 20rem;
   max-height: 50vh;
-  max-width: 80rem;
+  max-width: 79.5rem;
   padding: 0.33rem;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,7 +70,6 @@
   background-position-x: center;
   border-radius: 0.33rem;
   min-height: min-content;
-  margin-top: 5%;
 }
 
 .partners-logos {
@@ -77,7 +79,7 @@
   flex-wrap: wrap;
   width: 100%;
   height: 5rem;
-  margin: 5rem 0;
+  margin: 5.1rem 0;
 }
 .partners-logos > div {
   width: 10rem;
@@ -96,8 +98,59 @@
   background-position: center;
 }
 .partner3 {
-  background-image: url('https://oss.couponkirin.com/merchants/original/revgear.jpg');
-  background-size: cover;
+  background-image: url('https://bjjdepot.ca/media/catalog/category/Hayabusa_Logo_2010.jpg');
+  background-size: contain;
   background-repeat: no-repeat;
   background-position-y: center;
+}
+
+@media screen and (max-width: 480px) {
+  #nav-container {
+    height: 15rem;
+  }
+  .partners-logos {
+    gap: 1rem;
+  }
+  .partners-logos > div {
+    width: 6.6rem;
+  }
+}
+
+@media screen and (min-width: 570px) {
+  .partners-logos {
+    margin: 3.3rem 0;
+  }
+}
+
+@media screen and (max-width: 990px) {
+  #nav-container {
+    height: 17.5rem;
+  }
+  .partners-logos > div {
+    width: 7.2rem;
+  }
+}
+
+@media screen and (min-width: 990px) {
+  #nav-container {
+    background-position-y: 29%;
+  }
+  .partners-logos {
+    margin: 6rem 0;
+  }
+}
+
+@media screen and (max-height: 800px) {
+  #welcome-text {
+    padding-top: 1.8rem;
+  }
+  #to-top {
+    margin-top: 0.3rem;
+  }
+  .partners-logos {
+    margin: 3.3rem 0;
+  }
+  .partners-logos > div {
+    width: 8.8rem;
+  }
 }
