--- a/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
+++ b/shinobi-frontend/src/Components/WelcomePage/WelcomePage.css
@@ -58,3 +58,48 @@
   position: absolute;
   bottom: 3rem;
 }
+
+@media screen and (max-width: 480px) {
+  .presentation-text {
+    font-size: var(--fs-500);
+    animation: infinite-loops 18s infinite linear;
+  }
+  @keyframes infinite-loops {
+    0% {
+      margin-right: -1000%;
+    }
+    100% {
+      margin-right: 1000%;
+    }
+  }
+}
+
+@media screen and (max-width: 999px) {
+  .presentation-text {
+    font-size: var(--fs-600);
+    animation: infinite-loop 18s infinite linear;
+  }
+  @keyframes infinite-loop {
+    0% {
+      margin-right: -600%;
+    }
+    100% {
+      margin-right: 600%;
+    }
+  }
+}
+
+@media screen and (max-width: 1450px) {
+  .presentation-text {
+    font-size: var(--fs-700);
+    animation: infinite-loop 18s infinite linear;
+  }
+  @keyframes infinite-loop {
+    0% {
+      margin-right: -450%;
+    }
+    100% {
+      margin-right: 450%;
+    }
+  }
+}
