--- a/shinobi-frontend/src/Components/TopPage/TopPage.css
+++ b/shinobi-frontend/src/Components/TopPage/TopPage.css
@@ -104,19 +104,13 @@
   background-position-y: center;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 480px) {
   #nav-container {
     height: 15rem;
     background-size: cover;
     background-repeat: no-repeat;
     background-position-y: center;
     background-position-x: center;
-  }
-}
-
-@media screen and (max-width: 480px) {
-  #nav-container {
-    height: 15rem;
     width: auto;
     margin-inline: 0.33rem;
   }
@@ -124,14 +118,11 @@
     gap: 1rem;
     margin-top: 3rem;
   }
-  .partners-logos > div {
-    width: 6.6rem;
-  }
 }
 
-@media screen and (max-width: 999px) {
+@media screen and (max-width: 630px) {
   .partners-logos > div {
-    width: 7.2rem;
+    width: 6.6rem;
   }
 }
 
@@ -145,11 +136,13 @@
   #nav-container {
     background-position-y: 36%;
   }
-  .partners-logos {
-    margin: 6rem 0;
+}
+@media screen and (max-height: 500px) {
+  #nav-container {
+    max-height: none;
+    background-position-y: center;
   }
 }
-
 @media screen and (max-height: 800px) {
   #welcome-text {
     padding-top: 1rem;
@@ -166,11 +159,16 @@
 }
 @media screen and (min-height: 750px) {
   .partners-logos {
-    margin-top: 4rem;
+    margin-top: 4.5rem;
   }
 }
-@media screen and (min-height: 900px) {
+@media screen and (min-height: 830px) {
   .partners-logos {
     margin-top: 6rem;
+  }
+}
+@media screen and (min-height: 910px) {
+  .partners-logos {
+    margin-top: 7.5rem;
   }
 }
