--- a/shinobi-frontend/src/Components/Gallery/GalleryComponent/GalleryComponent.css
+++ b/shinobi-frontend/src/Components/Gallery/GalleryComponent/GalleryComponent.css
@@ -11,17 +11,18 @@
   right: 0;
   left: 0;
   border-radius: 0.33rem;
-  background-image: url('https://source.unsplash.com/TPhZnl2NEws');
   background-position: center;
   background-size: cover;
   z-index: -1;
   filter: blur(0.15rem);
   transition: all 1s ease-in;
+  background-color: hsl(var(--clr-dark));
 }
 .gallery-component:hover .gallery-background {
   filter: blur(0);
   scale: 110%;
 }
+
 @media screen and (min-width: 1000px) {
   .gallery-component {
     margin-top: 4.5rem;
