--- a/shinobi-frontend/src/Components/TopPage/TopPage.css
+++ b/shinobi-frontend/src/Components/TopPage/TopPage.css
@@ -66,7 +66,7 @@
   padding: 0.33rem;
   background-size: cover;
   background-repeat: no-repeat;
-  background-image: url(./view.jpg);
+  background-image: url('http://drive.google.com/uc?export=view&id=1mnFw3Knzb_LTu0t7NmYk8al9VXm_DGgx');
   background-position-y: center;
   background-position-x: center;
   border-radius: 0.33rem;
@@ -161,7 +161,7 @@
 }
 @media screen and (max-height: 670px) {
   #welcome-text {
-    padding-top: 1.2rem;
+    padding-top: 0.12rem;
   }
 }
 @media screen and (max-height: 800px) and (min-width: 800px) {
